@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+phodevi: Fix Linux CPU thread detection in some scenarios where inner-cores may be offlined
 phodevi: More robust CPU vulnerability reporting
 
 Phoronix Test Suite 8.8.0-Hvaler
